Deleted testing Excel files and deleted unnecessary comments

--- a/BGE Bill Data Extraction.ipynb
+++ b/BGE Bill Data Extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,14 +268,12 @@
     "    rate_box_bottom = 90\n",
     "    rate_bounding_box = (rate_box_left,rate_box_top,rate_box_right,rate_box_bottom)\n",
     "    \n",
-    "    return rate_bounding_box\n",
-    "\n",
-    "# second_page.crop(setGasRateUpperBoundingBox(second_page)).extract_text(x_tolerance = 1)"
+    "    return rate_bounding_box\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,15 +284,12 @@
     "    usage_box_bottom = 130\n",
     "    usage_bounding_box = (usage_box_left,usage_box_top,usage_box_right,usage_box_bottom)\n",
     "    \n",
-    "    return usage_bounding_box\n",
-    "\n",
-    "# usage = second_page.crop(usage_bounding_box).extract_text(x_tolerance = 1)\n",
-    "# usage.splitlines()[1]"
+    "    return usage_bounding_box\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,30 +349,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Name of PDF file: 2.18.20 - G\n",
-      "What type of bill is this?\n",
-      "e - electricity only    g - gas only    eg - electricity and gas \n",
-      "bill type: g\n",
-      "Is there a supplier on the bill?\n",
-      "yes    no\n",
-      "yes\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "file_name = input(\"Name of PDF file: \")\n",
     "\n",
-    "# file_name = 'PII Example 1'\n",
-    "#with pdfplumber.open('Bills/'+ file_name + '.pdf') as pdf:\n",
     "\n",
     "#initializing variables outside scope of open file\n",
     "utility_name = ''\n",
@@ -398,7 +377,6 @@
     "bill_dict = {}\n",
     "\n",
     "supplier_present = ''\n",
-    "\n",
     "electric_supplier_present = ''\n",
     "gas_supplier_present = ''\n",
     "\n",
@@ -412,9 +390,6 @@
     "    print('Invalid choice. Try again:')\n",
     "    bill_type = input('bill type: ')\n",
     "\n",
-    "# print('Is there a supplier on the bill?')\n",
-    "# print('yes    no')\n",
-    "# supplier_present = input().lower()\n",
     "    \n",
     "if (bill_type == 'e') or (bill_type =='g'):\n",
     "    print('Is there a supplier on the bill?')\n",
@@ -437,27 +412,12 @@
     "    gas_supplier_present = input().lower()\n",
     "    while (gas_supplier_present != 'yes') and (gas_supplier_present != 'no'):\n",
     "        print('Invalid choice. Try again:')\n",
-    "        gas_supplier_present = input()\n",
-    "\n",
-    "\n",
-    "# if(bill_type == 'e'):\n",
-    "#     gas_supplier_present = 'no'\n",
-    "#     electric_supplier_present = supplier_present\n",
-    "    \n",
-    "# elif(bill_type == 'g'):\n",
-    "#     electric_supplier_present = 'no'\n",
-    "#     gas_supplier_present = supplier_present\n",
-    "    \n",
-    "# else: \n",
-    "    \n",
-    "    \n",
-    "\n",
-    "\n"
+    "        gas_supplier_present = input()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,15 +463,12 @@
     "                gas_supplier = gas_supplier, gas_choice_id = gas_choice_id, gas_rate_code = gas_rate, \n",
     "                gas_usage = gas_usage)\n",
     "\n",
-    "    #10.22.20 E, 11.18.20 E format looks slightly different so doesn't work\n",
-    "\n",
-    "# bill_dict\n",
-    "        "
+    "    #10.22.20 E, 11.18.20 E format looks slightly different so doesn't work\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,14 +515,12 @@
     "                electric_supplier = electric_supplier, electric_usage = electric_usage,\n",
     "                gas_supplier = gas_supplier, gas_choice_id = gas_choice_id, gas_rate_code = gas_rate, gas_usage = gas_usage)\n",
     "\n",
-    "    #10.22.20 E, 11.18.20 E format looks slightly different so doesn't work\n",
-    "\n",
-    "# bill_dict\n"
+    "    #10.22.20 E, 11.18.20 E format looks slightly different so doesn't work\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,21 +754,12 @@
     "        #extracting from gas supply box\n",
     "        gas_supply_extract = defaultExtractText(first_page, setElectricSupplyBoundingBox(first_page))\n",
     "        gas_choice_id = setChoiceID(gas_supply_extract)\n",
-    "        print(gas_choice_id)\n",
-    "        \n",
-    "         #extracting electric rate code from second page\n",
-    "#         rate_extract = extractRateBoxText(second_page, setGasRateUpperBoundingBox(second_page))\n",
-    "#         gas_rate = setRate(rate_extract)\n",
     "        gas_supplier = np.nan\n",
-    "    \n",
+    "        \n",
+    "        #extracting electric rate code and usage from second page\n",
     "        gas_usage_extract = defaultExtractText(second_page, setGasUsageNoSuppBoundingBox(second_page))\n",
     "        gas_usage = setGasOnlyUsage(gas_usage_extract)\n",
-    "        print(gas_usage)\n",
-    "        \n",
-    "\n",
-    "#         gas_rate = setRate(defaultExtractText(second_page, setGasRateUpperBoundingBox(second_page)))\n",
     "        gas_rate = setRate(defaultExtractText(second_page, setGasRateNoSuppBoundingBox(second_page)))\n",
-    "        print(gas_rate)\n",
     "        \n",
     "        #extracting utility name from the bottom of the page\n",
     "        utility_name = setUtilityName(first_page)\n",
@@ -830,20 +776,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BGE\n",
-      "6505952885\n",
-      "Schedule C\n",
-      "20095\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if (bill_type == 'g') and (supplier_present == 'yes'):\n",
     "    with pdfplumber.open(f'Bills/{file_name}.pdf') as pdf:\n",
@@ -866,7 +801,6 @@
     "        #extracting from gas supply box\n",
     "        \n",
     "        gas_supply_extract = defaultExtractText(first_page, setElectricSupplyBoundingBox(first_page))\n",
-    "#         gas_choice_id = setGasChoiceID(gas_supply_extract)\n",
     "        gas_choice_id = setChoiceID(gas_supply_extract)\n",
     "        gas_supplier = setSupplier(gas_supply_extract)\n",
     "        print(gas_supplier)\n",
@@ -886,98 +820,16 @@
     "                electric_choice_id = electric_choice_id, electric_rate_code = electric_rate, \n",
     "                electric_supplier = electric_supplier, electric_usage = electric_usage,\n",
     "                gas_supplier = gas_supplier, gas_choice_id = gas_choice_id, gas_rate_code = gas_rate, gas_usage = gas_usage)\n",
-    "\n",
-    "        \n",
-    "        "
+    "      "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Utility</th>\n",
-       "      <th>Issued Date</th>\n",
-       "      <th>Company</th>\n",
-       "      <th>Street</th>\n",
-       "      <th>City</th>\n",
-       "      <th>State</th>\n",
-       "      <th>ZIP Code</th>\n",
-       "      <th>Electric Choice ID</th>\n",
-       "      <th>Electric Rate Code</th>\n",
-       "      <th>Electric Supplier</th>\n",
-       "      <th>Electric Usage (kWh)</th>\n",
-       "      <th>Gas Supplier</th>\n",
-       "      <th>Gas Choice ID</th>\n",
-       "      <th>Gas Rate Code</th>\n",
-       "      <th>Gas Usage (therms)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>BGE</td>\n",
-       "      <td>February 18, 2020</td>\n",
-       "      <td>Pharmaceutics International Inc</td>\n",
-       "      <td>10819 Gilroy Rd *Suite 100</td>\n",
-       "      <td>Cockeysville</td>\n",
-       "      <td>MD</td>\n",
-       "      <td>21031</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>BGE</td>\n",
-       "      <td>6505952885</td>\n",
-       "      <td>Schedule C</td>\n",
-       "      <td>20095</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Utility        Issued Date                          Company  \\\n",
-       "0     BGE  February 18, 2020  Pharmaceutics International Inc   \n",
-       "\n",
-       "                       Street          City State ZIP Code Electric Choice ID  \\\n",
-       "0  10819 Gilroy Rd *Suite 100  Cockeysville    MD    21031                N/A   \n",
-       "\n",
-       "  Electric Rate Code Electric Supplier Electric Usage (kWh) Gas Supplier  \\\n",
-       "0                N/A               N/A                  N/A          BGE   \n",
-       "\n",
-       "  Gas Choice ID Gas Rate Code Gas Usage (therms)  \n",
-       "0    6505952885    Schedule C              20095  "
-      ]
-     },
-     "execution_count": 216,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "bill_df = pd.DataFrame([bill_dict])\n",
     "bill_df.columns = [col.replace('_',' ') for col in bill_df]\n",
@@ -997,89 +849,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Utility</th>\n",
-       "      <th>Issued Date</th>\n",
-       "      <th>Company</th>\n",
-       "      <th>Street</th>\n",
-       "      <th>City</th>\n",
-       "      <th>State</th>\n",
-       "      <th>ZIP Code</th>\n",
-       "      <th>Electric Choice ID</th>\n",
-       "      <th>Electric Rate Code</th>\n",
-       "      <th>Electric Supplier</th>\n",
-       "      <th>Electric Usage (kWh)</th>\n",
-       "      <th>Gas Supplier</th>\n",
-       "      <th>Gas Choice ID</th>\n",
-       "      <th>Gas Rate Code</th>\n",
-       "      <th>Gas Usage (therms)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>BGE</td>\n",
-       "      <td>February 18, 2020</td>\n",
-       "      <td>Pharmaceutics International Inc</td>\n",
-       "      <td>10819 Gilroy Rd *Suite 100</td>\n",
-       "      <td>Cockeysville</td>\n",
-       "      <td>MD</td>\n",
-       "      <td>21031</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>BGE</td>\n",
-       "      <td>6505952885</td>\n",
-       "      <td>Schedule C</td>\n",
-       "      <td>20095</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Utility        Issued Date                          Company  \\\n",
-       "0     BGE  February 18, 2020  Pharmaceutics International Inc   \n",
-       "\n",
-       "                       Street          City State ZIP Code Electric Choice ID  \\\n",
-       "0  10819 Gilroy Rd *Suite 100  Cockeysville    MD    21031                N/A   \n",
-       "\n",
-       "  Electric Rate Code Electric Supplier Electric Usage (kWh) Gas Supplier  \\\n",
-       "0                N/A               N/A                  N/A          BGE   \n",
-       "\n",
-       "  Gas Choice ID Gas Rate Code Gas Usage (therms)  \n",
-       "0    6505952885    Schedule C              20095  "
-      ]
-     },
-     "execution_count": 218,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "if os.path.isfile('bill_data.xlsx') == True:\n",
     "    wb = openpyxl.load_workbook('bill_data.xlsx')\n",
@@ -1096,8 +868,6 @@
     "    for r in dataframe_to_rows(bill_df, index=False, header=True):\n",
     "        ws.append(r)\n",
     "\n",
-    "# ws['A1':'O1'].font = Font(bold = True)\n",
-    "\n",
     "for i in range(0, 15):\n",
     "    ws.cell(row = 1, column = i+1).font = Font(bold = True)\n",
     "        \n",
@@ -1108,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
