Fixed gas only usage bug

--- a/BGE Bill Data Extraction.ipynb
+++ b/BGE Bill Data Extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 466,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 467,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 468,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 469,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 470,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 471,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 472,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 473,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 474,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 475,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 476,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 477,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 478,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 479,
    "metadata": {
     "scrolled": true
    },
@@ -416,7 +416,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name of PDF file: 12.17.20 - G\n",
+      "Name of PDF file: Failed Bill Gas Only Usage Format 2\n",
       "What type of bill is this?\n",
       "e - electricity only    g - gas only    eg - electricity and gas \n",
       "bill type: g\n",
@@ -425,10 +425,10 @@
       "no\n",
       "Are there multiple usage amounts on this bill?\n",
       "yes    no\n",
-      "no\n",
+      "yes\n",
       "What is the name of the Excel file you would like to output to?\n",
       "Note: Names of files are case-sensitive\n",
-      "test\n"
+      "tst\n"
      ]
     }
    ],
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 480,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 481,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 482,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 483,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 484,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +858,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 485,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def setAnnualUsageChartBoundingBox(page):\n",
+    "    \n",
+    "    usage_box_left = 20\n",
+    "    usage_box_top = 20\n",
+    "    usage_box_right = (page.width//2) - 20\n",
+    "    usage_box_bottom = (page.height//2) - 230\n",
+    "    usage_bounding_box = (usage_box_left,usage_box_top,usage_box_right,usage_box_bottom)\n",
+    "    \n",
+    "    return usage_bounding_box"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 486,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def checkForAnnualUsageChart(page, bounding_box, commodity):\n",
+    "    \n",
+    "    commodity = commodity.upper()\n",
+    "    chart_extract = defaultExtractText(page, setAnnualUsageChartBoundingBox(page))\n",
+    "    \n",
+    "    if f'ANNUAL {commodity} USAGE' in chart_extract:\n",
+    "        return True\n",
+    "    \n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 487,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -924,8 +959,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
-   "metadata": {},
+   "execution_count": 488,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "if (bill_type == 'g') and (supplier_present == 'no'):\n",
@@ -951,20 +988,34 @@
     "        gas_choice_id = setChoiceID(gas_supply_extract)\n",
     "        gas_supplier = np.nan\n",
     "        \n",
-    "        if multiple_usage_gas == 'yes':\n",
+    "        if checkForAnnualUsageChart(second_page, setAnnualUsageChartBoundingBox(second_page), 'gas') == True:\n",
+    "            \n",
+    "            if multiple_usage_gas == 'yes':\n",
     "\n",
-    "            multiple_usage_extract = defaultExtractText(second_page, setMultipleLeftUsageBoundingBox(second_page))\n",
-    "            gas_usage = splitAndAddMultipleUsageNumbers(multiple_usage_extract, 'therms')\n",
-    "        \n",
-    "        else:\n",
-    "            #extracting from electric_usage\n",
-    "            gas_usage_extract = defaultExtractText(second_page, setGasUsageNoSuppBoundingBox(second_page))\n",
-    "            gas_usage = setGasOnlyUsage(gas_usage_extract)\n",
-    "        \n",
-    "        #extracting electric rate code and usage from second page\n",
-    "#         gas_usage_extract = defaultExtractText(second_page, setGasUsageNoSuppBoundingBox(second_page))\n",
-    "#         gas_usage = setGasOnlyUsage(gas_usage_extract)\n",
-    "        gas_rate = setRate(defaultExtractText(second_page, setGasRateNoSuppBoundingBox(second_page)))\n",
+    "                multiple_usage_extract = defaultExtractText(second_page, setMultipleLeftUsageBoundingBox(second_page))\n",
+    "                gas_usage = splitAndAddMultipleUsageNumbers(multiple_usage_extract, 'therms')\n",
+    "                \n",
+    "            else: \n",
+    "                gas_usage = defaultExtractText(second_page, setGasUsageSuppBoundingBox(second_page)).splitlines()[0]\n",
+    "                \n",
+    "            gas_rate = setRate(defaultExtractText(second_page, setGasRateSuppBoundingBox(second_page)))\n",
+    "            \n",
+    "        else:  \n",
+    "            \n",
+    "            if multiple_usage_gas == 'yes':\n",
+    "\n",
+    "                multiple_usage_extract = defaultExtractText(second_page, setMultipleLeftUsageBoundingBox(second_page))\n",
+    "                gas_usage = splitAndAddMultipleUsageNumbers(multiple_usage_extract, 'therms')\n",
+    "\n",
+    "            else:\n",
+    "                #extracting from electric_usage\n",
+    "                gas_usage_extract = defaultExtractText(second_page, setGasUsageNoSuppBoundingBox(second_page))\n",
+    "                gas_usage = setGasOnlyUsage(gas_usage_extract)\n",
+    "\n",
+    "            #extracting electric rate code and usage from second page\n",
+    "    #         gas_usage_extract = defaultExtractText(second_page, setGasUsageNoSuppBoundingBox(second_page))\n",
+    "    #         gas_usage = setGasOnlyUsage(gas_usage_extract)\n",
+    "            gas_rate = setRate(defaultExtractText(second_page, setGasRateNoSuppBoundingBox(second_page)))\n",
     "        \n",
     "        #extracting utility name from the bottom of the page\n",
     "        utility_name = setUtilityName(first_page)\n",
@@ -981,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 489,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 490,
    "metadata": {
     "scrolled": true
    },
@@ -1087,43 +1138,40 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>BGE</td>\n",
-       "      <td>12/17/2020</td>\n",
+       "      <td>05/19/2021</td>\n",
        "      <td>Pharmaceutics International Inc</td>\n",
-       "      <td>R 10819 Gilroy Rd *Suite 100</td>\n",
+       "      <td>F 10950 Beaver-Dam Rd</td>\n",
        "      <td>Cockeysville</td>\n",
        "      <td>MD</td>\n",
-       "      <td>21031</td>\n",
+       "      <td>21030</td>\n",
        "      <td>N/A</td>\n",
        "      <td>N/A</td>\n",
        "      <td>N/A</td>\n",
        "      <td>N/A</td>\n",
        "      <td>N/A</td>\n",
-       "      <td>5805119433</td>\n",
+       "      <td>1627775393</td>\n",
        "      <td>Schedule C</td>\n",
-       "      <td>18312</td>\n",
+       "      <td>734</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Utility Issued Date                          Company  \\\n",
-       "0     BGE  12/17/2020  Pharmaceutics International Inc   \n",
+       "  Utility Issued Date                          Company                 Street  \\\n",
+       "0     BGE  05/19/2021  Pharmaceutics International Inc  F 10950 Beaver-Dam Rd   \n",
        "\n",
-       "                         Street          City State ZIP Code  \\\n",
-       "0  R 10819 Gilroy Rd *Suite 100  Cockeysville    MD    21031   \n",
+       "           City State ZIP Code Electric Choice ID Electric Rate Code  \\\n",
+       "0  Cockeysville    MD    21030                N/A                N/A   \n",
        "\n",
-       "  Electric Choice ID Electric Rate Code Electric Supplier  \\\n",
-       "0                N/A                N/A               N/A   \n",
+       "  Electric Supplier Electric Usage (kWh) Gas Supplier Gas Choice ID  \\\n",
+       "0               N/A                  N/A          N/A    1627775393   \n",
        "\n",
-       "  Electric Usage (kWh) Gas Supplier Gas Choice ID Gas Rate Code  \\\n",
-       "0                  N/A          N/A    5805119433    Schedule C   \n",
-       "\n",
-       "  Gas Usage (therms)  \n",
-       "0              18312  "
+       "  Gas Rate Code  Gas Usage (therms)  \n",
+       "0    Schedule C                 734  "
       ]
      },
-     "execution_count": 226,
+     "execution_count": 490,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 491,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1173,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 492,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1198,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 493,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1255,6 +1303,8 @@
     "    ws_transposed.insert_rows(14)\n",
     "       \n",
     "else:\n",
+    "    \n",
+    "    #create new workbook\n",
     "    wb = openpyxl.Workbook()\n",
     "    ws_unformatted = wb.active\n",
     "    ws_unformatted.title = 'Unformatted Data'\n",
