Update BGE Bill Data Extraction.ipynb

--- a/BGE Bill Data Extraction.ipynb
+++ b/BGE Bill Data Extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 466,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 467,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 476,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 478,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 479,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -416,7 +416,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name of PDF file: Failed Bill Gas Only Usage Format 2\n",
+      "Name of PDF file: 8.13.20 - G\n",
       "What type of bill is this?\n",
       "e - electricity only    g - gas only    eg - electricity and gas \n",
       "bill type: g\n",
@@ -425,10 +425,10 @@
       "no\n",
       "Are there multiple usage amounts on this bill?\n",
       "yes    no\n",
-      "yes\n",
+      "no\n",
       "What is the name of the Excel file you would like to output to?\n",
       "Note: Names of files are case-sensitive\n",
-      "tst\n"
+      "Template - Flight Plan\n"
      ]
     }
    ],
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 480,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 481,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 482,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 483,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 484,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 487,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 488,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 490,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -1138,40 +1138,43 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>BGE</td>\n",
-       "      <td>05/19/2021</td>\n",
+       "      <td>08/13/2020</td>\n",
        "      <td>Pharmaceutics International Inc</td>\n",
-       "      <td>F 10950 Beaver-Dam Rd</td>\n",
+       "      <td>R 10819 Gilroy Rd *Suite 100</td>\n",
        "      <td>Cockeysville</td>\n",
        "      <td>MD</td>\n",
-       "      <td>21030</td>\n",
+       "      <td>21031</td>\n",
        "      <td>N/A</td>\n",
        "      <td>N/A</td>\n",
        "      <td>N/A</td>\n",
        "      <td>N/A</td>\n",
        "      <td>N/A</td>\n",
-       "      <td>1627775393</td>\n",
+       "      <td>5805119433</td>\n",
        "      <td>Schedule C</td>\n",
-       "      <td>734</td>\n",
+       "      <td>15764</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Utility Issued Date                          Company                 Street  \\\n",
-       "0     BGE  05/19/2021  Pharmaceutics International Inc  F 10950 Beaver-Dam Rd   \n",
+       "  Utility Issued Date                          Company  \\\n",
+       "0     BGE  08/13/2020  Pharmaceutics International Inc   \n",
        "\n",
-       "           City State ZIP Code Electric Choice ID Electric Rate Code  \\\n",
-       "0  Cockeysville    MD    21030                N/A                N/A   \n",
+       "                         Street          City State ZIP Code  \\\n",
+       "0  R 10819 Gilroy Rd *Suite 100  Cockeysville    MD    21031   \n",
        "\n",
-       "  Electric Supplier Electric Usage (kWh) Gas Supplier Gas Choice ID  \\\n",
-       "0               N/A                  N/A          N/A    1627775393   \n",
+       "  Electric Choice ID Electric Rate Code Electric Supplier  \\\n",
+       "0                N/A                N/A               N/A   \n",
        "\n",
-       "  Gas Rate Code  Gas Usage (therms)  \n",
-       "0    Schedule C                 734  "
+       "  Electric Usage (kWh) Gas Supplier Gas Choice ID Gas Rate Code  \\\n",
+       "0                  N/A          N/A    5805119433    Schedule C   \n",
+       "\n",
+       "  Gas Usage (therms)  \n",
+       "0              15764  "
       ]
      },
-     "execution_count": 490,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1198,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 491,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1221,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 492,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1246,9 +1249,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Worksheet Formatted Data does not exist.'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-30-69e736d723ad>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m     \u001b[0;31m#delete the old formatted sheet and replace it with a new blank one since it isn't easy to append to a new columns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m     \u001b[0mwb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwb\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Formatted Data'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m     \u001b[0mws_transposed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_sheet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Formatted Data'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.6/site-packages/openpyxl/workbook/workbook.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    286\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0msheet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtitle\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    287\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0msheet\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 288\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Worksheet {0} does not exist.\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    289\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    290\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__delitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'Worksheet Formatted Data does not exist.'"
+     ]
+    }
+   ],
    "source": [
     "#creating variables to hold formatting for header cells\n",
     "gray_fill = PatternFill(start_color='D0D3D6', end_color='D0D3D6', fill_type='solid')\n",
