--- a/BGE Bill Data Extraction.ipynb
+++ b/BGE Bill Data Extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 612,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 613,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 614,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 615,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 616,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 617,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 618,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 619,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 620,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 621,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 622,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 623,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 624,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 625,
    "metadata": {
     "scrolled": true
    },
@@ -418,7 +418,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name of PDF file: BillImage (2)\n",
+      "Name of PDF file: BillImage (1)\n",
       "What type of bill is this?\n",
       "e - electricity only    g - gas only    eg - electricity and gas \n",
       "bill type: eg\n",
@@ -430,13 +430,15 @@
       "no\n",
       "Are there multiple usage amounts for electricity on this bill?\n",
       "yes    no\n",
-      "no\n",
+      "yes\n",
       "Are there multiple usage amounts for gas on this bill?\n",
       "yes    no\n",
       "no\n",
+      "Invalid choice. Try again:\n",
+      "no\n",
       "What is the name of the Excel file you would like to output to?\n",
       "Note: Names of files are case-sensitive\n",
-      "p\n"
+      "Template - Flight Plan\n"
      ]
     }
    ],
@@ -531,7 +533,7 @@
     "        \n",
     "    print('Are there multiple usage amounts for gas on this bill?')\n",
     "    print('yes    no')\n",
-    "    multiple_usage_gas = input().lower()\n",
+    "    multiple_rgusage_gas = input().lower()\n",
     "    while (multiple_usage_gas != 'yes') and (multiple_usage_gas != 'no'):\n",
     "        print('Invalid choice. Try again:')\n",
     "        multiple_usage_gas = input().lower()\n",
@@ -545,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 626,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 627,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 628,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 629,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 630,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 631,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,7 +888,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 632,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# copies formatting from adjacent cell\n",
+    "# ws - Excel worksheet\n",
+    "# r - row\n",
+    "# c - column\n",
+    "def copyOriginalCellFormatting(ws, r, c):\n",
+    "    \n",
+    "    prev_cell = ws.cell(row = r, column = c-1) # gets data from the cell on the left of current cell\n",
+    "    \n",
+    "    ws.cell(row = r, column = c).font = copy(prev_cell.font)\n",
+    "    ws.cell(row = r, column = c).border = copy(prev_cell.border)\n",
+    "    ws.cell(row = r, column = c).fill = copy(prev_cell.fill)\n",
+    "    ws.cell(row = r, column = c).alignment = copy(prev_cell.alignment)\n",
+    "    ws.cell(row = r, column = c).number_format = copy(prev_cell.number_format)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 633,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 634,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 635,
    "metadata": {
     "scrolled": true
    },
@@ -1045,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 636,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1098,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 637,
    "metadata": {
     "scrolled": true
    },
@@ -1129,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 638,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1152,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 639,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1177,21 +1201,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 640,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "Exception",
-     "evalue": "Excel file not found",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-58-dc192be4dd58>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     68\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 70\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Excel file not found'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     71\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m     \u001b[0;31m# # create new workbook\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mException\u001b[0m: Excel file not found"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# creating variables to hold formatting for header cells\n",
     "gray_fill = PatternFill(start_color='D0D3D6', end_color='D0D3D6', fill_type='solid')\n",
@@ -1209,7 +1221,7 @@
     "            ws_unformatted.append(r)\n",
     "            \n",
     "        # delete the old formatted sheet and replace it with a new blank one since it isn't easy to append to a new columns\n",
-    "        wb.remove(wb['Formatted Data'])\n",
+    "#         wb.remove(wb['Formatted Data'])\n",
     "    \n",
     "    else: \n",
     "        ws_unformatted = wb.create_sheet('Unformatted Data')\n",
@@ -1297,29 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# copies formatting from adjacent cell\n",
-    "# ws - Excel worksheet\n",
-    "# r - row\n",
-    "# c - column\n",
-    "def copyOriginalCellFormatting(ws, r, c):\n",
-    "    \n",
-    "    prev_cell = ws.cell(row = r, column = c-1) # gets data from the cell on the left of current cell\n",
-    "    \n",
-    "    ws.cell(row = r, column = c).font = copy(prev_cell.font)\n",
-    "    ws.cell(row = r, column = c).border = copy(prev_cell.border)\n",
-    "    ws.cell(row = r, column = c).fill = copy(prev_cell.fill)\n",
-    "    ws.cell(row = r, column = c).alignment = copy(prev_cell.alignment)\n",
-    "    ws.cell(row = r, column = c).number_format = copy(prev_cell.number_format)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 641,
    "metadata": {},
    "outputs": [],
    "source": [
